# datasus-metadata

./: .gitignore  README.md  copy-files.py  pyproject.toml  update-metadados.py  update-metadata.py  update-transferencia.py
.github/workflows/: update.yaml
metadata/: index.json
metadata/auxiliary/: base-populacional-ibge.json  cih.json  ciha.json  cmd.json  cnes.json  pce.json  po.json  resp.json  sia.json  sih.json  sim-cid09.json  sim-cid10.json  sim.json  sinan.json  sinasc-anterior.json  sinasc-nova.json  sinasc.json  siscolo.json  sismama.json  sisprenatal.json
metadata/data/: base-populacional-ibge-pop.json  base-populacional-ibge-pops.json  base-populacional-ibge-popt.json  base-territorial-conversao.json  base-territorial-mapas.json  base-territorial.json  cih-cr.json  ciha.json  cnes-dc.json  cnes-ee.json  cnes-ef.json  cnes-ep.json  cnes-eq.json  cnes-gm.json  cnes-hb.json  cnes-in.json  cnes-lt.json  cnes-pf.json  cnes-rc.json  cnes-sr.json  cnes-st.json  pce.json  po.json  resp.json  sia-ab.json  sia-abo.json  sia-acf.json  sia-ad.json  sia-am.json  sia-an.json  sia-aq.json  sia-ar.json  sia-atd.json  sia-pa.json  sia-ps.json  sia-sad.json  sih-er.json  sih-rd.json  sih-rj.json  sih-sp.json  (+129 more)
metadata/documentation/: base-populacional-ibge.json  base-territorial.json  ciha.json  cmd.json  cnes.json  pce.json  po.json  resp.json  sia.json  sih.json  sim-cid09.json  sim-cid10.json  sim.json  sinan.json  sinasc-anterior.json  sinasc-nova.json  sinasc.json
metadata/files/: cih-cr.json  cnes-dc.json  cnes-ee.json  cnes-ef.json  cnes-ep.json  cnes-in.json  (+44 more)
(+9 files in other folders)
