[project]
name = "datasus-metadata"
version = "0.1.0"
description = """
A library to keep up to date datasus metadata files
in a GitHub repository
"""
authors = [
    { name = "Komesu, D.K.", email = "daniel@dkko.me" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
